# sotawhat

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-13-sotawhat-multisource-digest.md  2026-06-14-medico-ai-intersection.md  2026-06-14-obsidian-concept-links.md
docs/superpowers/specs/: 2026-06-13-sotawhat-multisource-digest-design.md  2026-06-14-medico-ai-intersection-design.md  2026-06-14-obsidian-concept-links-design.md
scripts/: schedule_digest.ps1
sotawhat/: backfill.py  cli.py  digest.py  models.py  obsidian.py  profiles.py  render.py  summarize.py  textmatch.py
sotawhat/sources/: arxiv.py  base.py  hf_papers.py  pubmed.py  rss.py  semantic_scholar.py
tests/: test_arxiv.py  test_backfill.py  test_base.py  test_cli.py  test_digest.py  test_hf_papers.py  test_models.py  test_obsidian.py  test_profiles.py  test_pubmed.py  test_render.py  test_rss.py  test_semantic_scholar.py  test_summarize.py  test_textmatch.py
tests/fixtures/: arxiv_transformer.xml  hf_daily_papers.json  pubmed_efetch.xml  pubmed_esearch.json  sample_feed.xml  semantic_scholar_transformer.json
